# mb

./: CMakeLists.txt  README.md  config.js.sample  fast_install.sh  install.sh  lib_install.sh  maybe_interesting  mb-daemon  mb-spawn-daemon  mbd.sh  message_board  test4board.sh
apps/: addfunc.h  auth.cpp  forums.cpp  forums.h  master.cpp  master.h  mb.cpp  mb.h  thread.cpp  thread.h
data/: auth.h  data.h  forums.h  master.h  thread.h
locale/ru/LC_MESSAGES/: mb.po
markdown/: markdown-tokens.cpp  markdown-tokens.h  markdown.h
media/: script.js  style.css
message_board/: CMakeLists.txt  config.js.sample
message_board/apps/: addfunc.cpp  auth.h  forums.cpp  forums.h  main.cpp  master.cpp  mb.cpp  thread.cpp  thread.h
message_board/data/: data.h  forums.h  master.h  thread.h
message_board/locale/he/LC_MESSAGES/: mb.po
message_board/locale/ru/LC_MESSAGES/: mb.po
message_board/media/: script.js  style-ltr.css  style-rtl.css  style.css
message_board/model/: mysql.sql  sqlite3.sql
message_board/view/: forums.tmpl  master.tmpl  thread.tmpl
model/: forum.sql  mysql.sql  old_forum.sql
view/: forums.tmpl  master.tmpl  thread.tmpl
